🐛 Fixed the bug that caused the site to have an overflow due to the dimensions of the icon image (2160px) on devices with a height less than 2160px.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,9 +17,7 @@ hr{
     border: 0;
     height: 3rem;
 }
-body{
-    overflow: hidden;
-}
+
 /* FONTES */
 .roboto {
     font-family: Roboto, sans-serif;
